# Semantic-Analyzer-Generator

./: .gitignore  Makefile.am  Makefile.in  README.md  TestMain.cpp  configure  configure.ac  main.cpp  parser.cpp  parser.pgen.cpp  parserGeneratorMain.cpp  test.cpp
LexicalAnalysis/: LexicalAnalyzer.cpp  LexicalAnalyzer.h  LexicalAnalyzerGenerator.cpp  LexicalAnalyzerGenerator.h  Token.cpp  Token.h
LexicalAnalysis/Automata/: Automata Saved Representation Format  Automaton.cpp  Automaton.h  DFAState.cpp  DFAState.h  NFAState.cpp  NFAState.h  State.cpp  State.h  StateBuilder.cpp  StateBuilder.h
ParserGenerator/: GrammarSymbol.cpp  GrammarSymbol.h  NonTerminalSymbol.cpp  NonTerminalSymbol.h  Parser.cpp  Parser.h  ParserGenerator.cpp  ParserGenerator.h  Parsers Saved Representation Format  TerminalSymbol.cpp  TerminalSymbol.h
SemanticAnalyzerGenerator/: AbstractSemanticAnalyzerFactory.cpp  AbstractSemanticAnalyzerFactory.h  SemanticAction.cpp  SemanticAction.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzerGenerator.cpp  SemanticAnalyzerGenerator.h  temps.cpp
Testing/: testing1.cpp  testing2.cpp
